--- a/addons/account/wizard/account_move_send_views.xml
+++ b/addons/account/wizard/account_move_send_views.xml
@@ -15,18 +15,11 @@
                 <field name="enable_download" invisible="1"/>
                 <field name="enable_send_mail" invisible="1"/>
                 <field name="send_mail_readonly" invisible="1"/>
-                <field name="send_mail_warning_message" invisible="1"/>
                 <field name="display_mail_composer" invisible="1"/>
                 <field name="mail_lang" invisible="1"/>
-                <field name="sequence_gap_warning" invisible="1"/>
 
-                <div class="m-0" name="warnings">
-                    <field name="send_mail_warning_message" class="o_field_html" widget="actionable_errors"/>
-                    <div class="alert alert-warning"
-                         role="alert"
-                         invisible="not sequence_gap_warning">
-                         Sending these invoices will create a gap in the sequence.
-                    </div>
+                <div class="m-0" name="warnings" invisible="not warnings">
+                    <field name="warnings" class="o_field_html" widget="actionable_errors"/>
                 </div>
 
                 <group>
