[IMP] project: generic improvement for project app
This commit addresses two points:

-When duplicating a favourite project, the copy project will not be favourite.
-When creating a new project, the alias domain will be automatically set as
 the company's default alias domain.

task-3940556

--- a/addons/project/views/project_project_views.xml
+++ b/addons/project/views/project_project_views.xml
@@ -336,6 +336,7 @@
                     <div name="alias_def" class="mt-2" colspan="2">
                         <label for="alias_name" string="Create tasks by sending an email to"/>
                         <span>
+                            <field name="alias_id" invisible="1"/>
                             <field name="alias_name" placeholder="e.g. office-party"/>@
                             <field name="alias_domain_id" class="oe_inline" placeholder="e.g. mycompany.com"
                                    options="{'no_create': True, 'no_open': True}"/>
