[FIX] account: align 'on' on report invoice pdfs
Problem
---
When printing invoices involving different tax groups (from the actions
in the invoice form view), the text baseline for the word 'on' and
the rest of the text ("<tax_name> on <corresponding_amount>")
in the taxes summary are different. (ie the word is misaligned)

Steps
---
**NOTE**: the bug only appears on newer (~`0.13`) versions of `wkhtmltopdf`
* create an invoice for 2 products,
* make the products use different taxes, from at least 2 different
  tax groups (if needed configure in Accounting > Configuration > Taxes)
* Actions (cog) > print > Invoices
=> on the generated pdf the word 'on' is misaligned

Note
---
Fix tested on `wkhtmtopdf 0.13`.
On `wkhtmltopdf 0.12.6` -> already worked, but ensured fix has no visual effect

opw-3940888

X-original-commit: 7363d568df6e82119eed1cec55b3ae67a3816a1a

--- a/addons/account/views/report_invoice.xml
+++ b/addons/account/views/report_invoice.xml
@@ -365,7 +365,7 @@
                         <td>
                             <span class="text-nowrap">
                                 <span t-out="amount_by_group['tax_group_name']">Tax 15%</span>
-                                on
+                                <span> on </span>
                                 <span t-out="amount_by_group['formatted_tax_group_base_amount']">27.00</span>
                             </span>
                         </td>
@@ -407,7 +407,7 @@
                                     <td>
                                         <span class="text-nowrap">
                                             <span t-out="amount_by_group['tax_group_name']">Tax 15%</span>
-                                            on
+                                            <span> on </span>
                                             <span t-out="amount_by_group['tax_group_base_amount_company_currency']"
                                                   t-options='{"widget": "monetary", "display_currency": o.company_currency_id}'>
                                                 27.00
