[IMP] website_event{_*}: set specific SEO data for sub-pages
* = booth, booth_sale, exhibitor, meet, meet_quiz, track, track_quiz

How to reproduce:
=====================
- Create an event and activate the submenu
- Open Talk Proposal page and set specific SEO discription and title
- Open Exhibitors page and set another one

Specifications:
=====================
- They are currently synced.
- All the sub-pages except 'Introduction' and 'Location' page are synced.
- SEO data of all the pages should be different from one another.

After this commit:
=====================
SEO data for all sub-pages will be different.

Task-3874050

--- a/addons/website_event_meet/views/event_meet_templates_list.xml
+++ b/addons/website_event_meet/views/event_meet_templates_list.xml
@@ -37,9 +37,9 @@
                     aria-label="Dropdown menu" data-bs-display="static" data-bs-toggle="dropdown" href="#" role="button">
                     <span t-out="current_lang.name if current_lang else 'All Languages'"/></a>
                 <div class="dropdown-menu" role="menu">
-                    <a class="dropdown-item" role="menuitem" t-attf-href="/event/#{slug(event)}/community">All Languages
+                    <a class="dropdown-item" role="menuitem" t-attf-href="/event/#{slug(event)}/community/#{page}">All Languages
                        </a>
-                    <a class="dropdown-item" role="menuitem" t-as="language" t-attf-href="/event/#{slug(event)}/community?lang=#{language.id}" t-out="language.name" t-foreach="available_languages"/>
+                    <a class="dropdown-item" role="menuitem" t-as="language" t-attf-href="/event/#{slug(event)}/community/#{page}?lang=#{language.id}" t-out="language.name" t-foreach="available_languages"/>
                 </div>
             </div>
         </div>
