--- a/addons/website_event_track/views/event_templates.xml
+++ b/addons/website_event_track/views/event_templates.xml
@@ -8,7 +8,7 @@
             <div class="col-12">
                 <h3>Book your seats to the best talks</h3>
                 <p>Get prepared and
-                    <a t-att-href="'/event/%s/track' % (slug(event))">register to your favorites talks now.</a>
+                    <a t-att-href="'/event/%s/track/talks-%s' % (slug(event), event.name.replace(' ','-').lower())">register to your favorites talks now.</a>
                 </p>
             </div>
         </div>
