--- a/addons/website_event_exhibitor/views/event_exhibitor_templates_page.xml
+++ b/addons/website_event_exhibitor/views/event_exhibitor_templates_page.xml
@@ -5,7 +5,7 @@
     <t t-set="no_header" t-value="option_widescreen"/>
     <t t-set="no_footer" t-value="option_widescreen"/>
     <t t-call="website_event.layout">
-        <t t-set="navbar__back_url" t-value="'/event/%s/exhibitors' % (slug(event))"/>
+        <t t-set="navbar__back_url" t-value="'/event/%s/exhibitors/exhibitors-%s' % (slug(event), event.name.replace(' ','-').lower())"/>
         <t t-set="navbar__back_title">Back to all Exhibitors</t>
         <t t-set="navbar__back_text">All Exhibitors</t>
 
