--- a/addons/website_event_meet/views/event_meet_templates_page.xml
+++ b/addons/website_event_meet/views/event_meet_templates_page.xml
@@ -5,7 +5,7 @@
     <t t-set="no_header" t-value="option_widescreen"/>
     <t t-set="no_footer" t-value="option_widescreen"/>
     <t t-call="website_event.layout">
-        <t t-set="navbar__back_url" t-value="'/event/%s/community' % (slug(event))"/>
+        <t t-set="navbar__back_url" t-value="'/event/%s/community/community-%s' % (slug(event), event.name.replace(' ', '-').lower())"/>
         <t t-set="navbar__back_title">Back to all Rooms</t>
         <t t-set="navbar__back_text">All Rooms</t>
 
