--- a/addons/website_event_track/views/event_track_templates_page.xml
+++ b/addons/website_event_track/views/event_track_templates_page.xml
@@ -3,7 +3,7 @@
 
 <template id="event_track_main" name="Event Exhibitor">
     <t t-call="website_event.layout">
-        <t t-set="navbar__back_url" t-value="'/event/%s/track' % (slug(event))"/>
+        <t t-set="navbar__back_url" t-value="'/event/%s/track/talks-%s' % (slug(event), event.name.replace(' ','-').lower())"/>
         <t t-set="navbar__back_title">Back to All Talks</t>
         <t t-set="navbar__back_text">All Talks</t>
 
