--- a/addons/project/views/project_sharing_project_task_views.xml
+++ b/addons/project/views/project_sharing_project_task_views.xml
@@ -300,11 +300,27 @@
     <record id="project_sharing_project_task_view_search" model="ir.ui.view">
         <field name="name">project.task.search.form</field>
         <field name="model">project.task</field>
-        <field name="inherit_id" ref="project.view_task_search_form_project_base"/>
+        <field name="inherit_id" ref="project.view_task_search_form_base"/>
         <field name="mode">primary</field>
         <field name="priority">999</field>
         <field name="arch" type="xml">
-            <search position="inside"/>
+            <filter name="date_last_stage_update" position="after">
+                <filter string="Deadline" name="date_deadline" date="date_deadline">
+                    <filter name="deadline_future" string="Future" domain="[('date_deadline', '&gt;', datetime.datetime.combine(context_today(), datetime.time(23,59,59)).to_utc())]"/>
+                    <filter name="deadline_this_week" string="This Week" domain="[
+                        ('date_deadline', '&gt;=', datetime.datetime.combine(context_today() + relativedelta(weeks=-1,weekday=0), datetime.time(0,0,0)).to_utc()),
+                        ('date_deadline', '&lt;', datetime.datetime.combine(context_today() + relativedelta(weekday=0), datetime.time(0,0,0)).to_utc()),
+                    ]"/>
+                    <filter name="deadline_today" string="Today" domain="[
+                        ('date_deadline', '&gt;=', datetime.datetime.combine(context_today(), datetime.time(0,0,0)).to_utc()),
+                        ('date_deadline', '&lt;=', datetime.datetime.combine(context_today(), datetime.time(23,59,59)).to_utc()),
+                    ]"/>
+                    <filter name="deadline_past_due" string="Overdue" domain="[('date_deadline', '&lt;', datetime.datetime.combine(context_today(), datetime.time(0,0,0)).to_utc())]"/>
+                </filter>
+            </filter>
+            <filter name="last_stage_update" position="after">
+                <filter string="Deadline" name="deadline" context="{'group_by': 'date_deadline'}"/>
+            </filter>
             <xpath expr="//search/filter[@name='inactive']" position='attributes'>
                 <attribute name='invisible'>1</attribute>
             </xpath>
