[IMP] account,l10n_hu_edi: Multi-EDI PoC
This is a PoC to see what changes would be needed to trigger the
Hungarian EDI on invoices issued in Hungary by a foreign company.

The proposed flow requires the following configuration:
- Create a fiscal position for Hungary, and insert the Hungarian VAT
  number in the 'Foreign VAT' field.
- Click on the button to load Hungarian taxes.
- This should make the Hungarian EDI configuration appear in the
  Accounting settings. Enter the NAV credentials there.
- Then, create an invoice that uses the Hungarian fiscal position.
- Now the NAV 3.0 option appears in the Send and Print wizard, and
  lets you issue invoices with the NAV using your Hungarian VAT number.

taskid: 3989516

--- a/addons/l10n_hu_edi/views/res_config_settings_views.xml
+++ b/addons/l10n_hu_edi/views/res_config_settings_views.xml
@@ -6,8 +6,10 @@
         <field name="inherit_id" ref="account.res_config_settings_view_form"/>
         <field name="arch" type="xml">
             <xpath expr="//block[@id='invoicing_settings']" position="after">
+                <field name="multi_vat_foreign_country_ids" invisible="1"/>
+                <field name="account_fiscal_country_id" invisible="1"/>
                 <block title="Hungarian Electronic Invoicing"
-                       invisible="country_code != 'HU'"
+                       invisible="%(base.hu)d not in (multi_vat_foreign_country_ids + [account_fiscal_country_id])"
                        groups="account.group_account_manager"
                        name="l10n_hu_edi_settings">
                     <setting company_dependent="1" string="NAV Credentials"
