--- a/addons/l10n_hu_edi/views/res_company_views.xml
+++ b/addons/l10n_hu_edi/views/res_company_views.xml
@@ -7,8 +7,9 @@
         <field name="inherit_id" ref="account.view_company_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='company_registry']" position="after">
+                <field name="multi_vat_foreign_country_ids" invisible="1"/>
                 <field name="account_fiscal_country_id" invisible="1"/>
-                <field name="l10n_hu_group_vat" invisible="account_fiscal_country_id != %(base.hu)d"/>
+                <field name="l10n_hu_group_vat" invisible="%(base.hu)d not in (multi_vat_foreign_country_ids + [account_fiscal_country_id])"/>
             </xpath>
         </field>
     </record>
