[IMP] mail: slightly improve message reaction style
1. emoji were slightly too small
2. there was too much spacing between emoji and counter
3. self reaction were too much visible (no border opacity)
4. counters were hard to read (bolder)
5. no hover effect on the reaction
6. reaction items are not rounded enough, making it harsh

This commit improves all of issues above.

--- a/addons/mail/static/src/core/common/message_reactions.scss
+++ b/addons/mail/static/src/core/common/message_reactions.scss
@@ -1,3 +1,20 @@
-.o-mail-MessageReaction.o-selfReacted {
-    background: mix($o-brand-primary, $o-view-background-color, 10%);
+.o-mail-MessageReaction {
+    &.o-selfReacted {
+        --border-opacity: 0.5;
+        background: mix($o-brand-primary, $o-view-background-color, 7.5%);
+
+        &:hover {
+            --border-opacity: 0.75;
+        }
+    }
+
+    &:not(.o-selfReacted) {
+        --border-opacity: 0.35;
+        border-color: rgba(var(--secondary-rgb), var(--border-opacity)) !important;
+
+        &:hover {
+            --border-opacity: 1;
+        }
+    }
 }
+
