--- a/addons/account_peppol/views/res_config_settings_views.xml
+++ b/addons/account_peppol/views/res_config_settings_views.xml
@@ -59,7 +59,7 @@
                                             ('is_account_peppol_participant', '=', False),
                                             ('account_peppol_proxy_state', 'not in', ('not_registered', 'not_verified'))
                                         ]}">
-                                <label string="Phone Number"
+                                <label string="Mobile Number"
                                         for="account_peppol_phone_number"
                                         class="col-lg-3 o_light_label"/>
                                 <field name="account_peppol_phone_number"
