[FIX] account: display preview when uploading PDF on a new invoice
Steps to reproduce:
- Install Invoicing
- Go to "Invoicing / Configuration / Settings"
- Deactivate "Document Digitalization"
- Create an invoice
- Upload a PDF via paperclip button or drag and drop in the chatter

Issue:
The preview box appears but it is empty.

Cause:
In "onUploaded" function of Chatter component, the parent view
is not reloaded once the attachment is uploaded because
"hasParentReloadOnAttachmentsChanged" property is False.
This property depends on "reload_on_attachment" attribute.

Solution:
Add "reload_on_attachment" attribute for "chatter" component in the view
as it is done when "account_invoice_extract" module is installed.

opw-3887671

X-original-commit: f88f134df637d29adaad7eeffbe9865b4f4c688c

--- a/addons/account/views/account_move_views.xml
+++ b/addons/account/views/account_move_views.xml
@@ -1398,7 +1398,7 @@
                     <div class="o_attachment_preview"
                          invisible="move_type not in ('out_invoice', 'out_refund', 'in_invoice', 'in_refund') or state != 'draft'" />
                     <!-- Chatter -->
-                    <chatter/>
+                    <chatter reload_on_attachment="True"/>
                 </form>
             </field>
         </record>
